# ChaoticGraphs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/category/: category.rs  mod.rs  topology.rs
src/graph/: chip_firing.rs  graph.rs  hopfield.rs  mod.rs  node.rs
src/sheaf/: conditions.rs  mod.rs  presheaf.rs  sheaf.rs
src/simulation/: chip_firing.rs  hopfield.rs  mod.rs
src/utils/: conditions.rs
