[package]
name = "divisor_networks"
authors = ["Daniel Humphries <d.humphries@ucl.ac.uk>"]
description = "Discrete Graphs for Indiscrete Researchers - Networks with Grothendieck Topology."
license = "CC-BY-NC-4.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
